<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/universalBackground"
    tools:context=".EditHwActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="Edit Homework" />

        <TextView
            android:id="@+id/HwTitleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/title" />

        <TextView
            android:id="@+id/HwClassLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hwclass" />

        <EditText
            android:id="@+id/Class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Hwclass" />

        <TextView
            android:id="@+id/HwExpireDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expire_date" />

        <EditText
            android:id="@+id/ExpireDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/expire_date"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/HwDateToNotifyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_to_notify" />

        <EditText
            android:id="@+id/DateToNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/date_to_notify"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="DeleteItem"
                app:srcCompat="@android:drawable/btn_dialog" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="UpdateItem"
                app:srcCompat="@android:drawable/ic_menu_save" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>